[gd_scene load_steps=10 format=3 uid="uid://bju2p4ayn6gr1"]

[ext_resource type="Script" uid="uid://t73tbrl81fbd" path="res://main.gd" id="1_1bvp3"]
[ext_resource type="PackedScene" uid="uid://capv1tkqxflob" path="res://Auth/Login.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://e1ksu77hx2b1" path="res://conexion/conectando.tscn" id="2_lquwl"]
[ext_resource type="PackedScene" uid="uid://755crq4hxdue" path="res://Auth/interface_registro.tscn" id="3_lquwl"]
[ext_resource type="PackedScene" uid="uid://do3ns68yhh8y" path="res://main_menu/main_menu.tscn" id="5_lquwl"]
[ext_resource type="PackedScene" uid="uid://d0ehxsilmfuld" path="res://creador_masos/creadorMazos.tscn" id="6_7mycd"]
[ext_resource type="PackedScene" uid="uid://dbp17g14a0sys" path="res://panel_desplazable/panel_desplazable.tscn" id="7_5vw27"]
[ext_resource type="Script" uid="uid://cfl61ej4ybjyc" path="res://loader.gd" id="7_272bh"]
[ext_resource type="PackedScene" uid="uid://crmv4rejrf6ds" path="res://juego 4/juego.tscn" id="9_kek77"]

[node name="Main" type="Node"]
script = ExtResource("1_1bvp3")

[node name="Conectando" parent="." instance=ExtResource("2_lquwl")]
visible = false

[node name="Login" parent="." instance=ExtResource("1_ig7tw")]
visible = false
texture_filter = 2

[node name="InterfaceRegistro" parent="." instance=ExtResource("3_lquwl")]
visible = false

[node name="CreadorMazos" parent="." instance=ExtResource("6_7mycd")]
visible = false

[node name="Loader" type="Node" parent="."]
script = ExtResource("7_272bh")

[node name="PanelDesplazableMainMenu" parent="." instance=ExtResource("7_5vw27")]
visible = false
anchors_preset = 15
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_vertical = 2
demora_entrada = 2.0
direccion_entrada = 0

[node name="MainMenu" parent="PanelDesplazableMainMenu" instance=ExtResource("5_lquwl")]
texture_filter = 1
layout_mode = 1

[node name="Juego" parent="." instance=ExtResource("9_kek77")]

[connection signal="boton_registrar_presionado" from="Login" to="." method="_on_login_boton_registrar_presionado"]
[connection signal="login_ok" from="Login" to="." method="_on_login_login_ok"]
[connection signal="back_button_pressed" from="InterfaceRegistro" to="." method="_on_interface_registro_back_button_pressed"]
[connection signal="usuario_creado" from="InterfaceRegistro" to="." method="_on_interface_registro_usuario_creado"]
[connection signal="cancelar_button_pressed" from="CreadorMazos" to="." method="_on_creador_mazos_cancelar_button_pressed"]
[connection signal="listo_button_pressed" from="CreadorMazos" to="." method="_on_creador_mazos_listo_button_pressed"]
[connection signal="button_crear_mazo_pressed" from="PanelDesplazableMainMenu/MainMenu" to="." method="_on_main_menu_button_crear_mazo_pressed"]
[connection signal="button_editar_pressed" from="PanelDesplazableMainMenu/MainMenu" to="." method="_on_main_menu_button_editar_pressed"]
